--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto ">
                     <div class="card-body">
                         <h5 class="card-title">Flashcards</h5>
-                        <p class="card-text"></p>
+                        <p class="card-text">O Flashcards Colleen Hoover é um site criado para ajudar a aprender sobre os livros de Colleen Hoover. Feito com HTML, CSS e JavaScript, ele usa flashcards interativos e tem um design responsivo, com cores suaves que tornam a navegação fácil e agradável.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
                     </div>
@@ -133,12 +133,10 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>
-                    </p>
-                    <p> </p>
-                    <p></p>
-                    <p>
-                        </p>
+                    <p>O Flashcards Colleen Hoover é um site criado para ajudar as pessoas a aprender e revisar temas dos livros da autora Colleen Hoover de um jeito fácil e divertido. Ele foi desenvolvido seguindo as instruções da plataforma Alura e usando como base o site Flashcards, que é conhecido por organizar o conteúdo em cartões de memória. Com isso, o site ajuda os leitores a explorar detalhes e curiosidades dos livros, facilitando o estudo e a memorização.</p>
+                    <p> O design do site é responsivo, ou seja, ele funciona bem em qualquer dispositivo, seja celular, tablet ou computador. As cores foram escolhidas para deixar o site bonito e agradável, combinando com o clima envolvente dos livros de Colleen Hoover. Tons suaves e destaques criam uma experiência visual agradável, deixando o conteúdo claro e fácil de ler.</p>
+                    <p>O site foi feito com HTML, CSS e JavaScript, o que permite interatividade, assim os usuários podem navegar pelos flashcards e aprender de forma dinâmica. O layout foi planejado para ser simples e direto, permitindo que os leitores encontrem o que precisam sem dificuldades. É uma maneira prática de conhecer mais sobre a obra de Colleen Hoover e suas histórias de uma forma rápida e organizada.</p>
+
                     <img src="" alt="Projeto 3" class="img-fluid w-100">
                 </div>
                 <div class="modal-footer">
