--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto ">
+                    <img src="img/projeto3.png" class="card-img-top" alt="Imagem do projeto ">
                     <div class="card-body">
                         <h5 class="card-title">Flashcards</h5>
                         <p class="card-text">O Flashcards Colleen Hoover é um site criado para ajudar a aprender sobre os livros de Colleen Hoover. Feito com HTML, CSS e JavaScript, ele usa flashcards interativos e tem um design responsivo, com cores suaves que tornam a navegação fácil e agradável.</p>
@@ -140,8 +140,8 @@
                     <img src="" alt="Projeto 3" class="img-fluid w-100">
                 </div>
                 <div class="modal-footer">
-                    <a href="">Ver projeto ao vivo</a>
-                    <a href="">Ver código do projeto</a>
+                    <a href="https://bruunagarcia.github.io/flashcardmeu1/flashCard/">Ver projeto ao vivo</a>
+                    <a href="https://github.com/bruunagarcia/flashcardmeu1">Ver código do projeto</a>
                 </div>
             </div>
         </div>
