--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <p> O design do site é responsivo, ou seja, ele funciona bem em qualquer dispositivo, seja celular, tablet ou computador. As cores foram escolhidas para deixar o site bonito e agradável, combinando com o clima envolvente dos livros de Colleen Hoover. Tons suaves e destaques criam uma experiência visual agradável, deixando o conteúdo claro e fácil de ler.</p>
                     <p>O site foi feito com HTML, CSS e JavaScript, o que permite interatividade, assim os usuários podem navegar pelos flashcards e aprender de forma dinâmica. O layout foi planejado para ser simples e direto, permitindo que os leitores encontrem o que precisam sem dificuldades. É uma maneira prática de conhecer mais sobre a obra de Colleen Hoover e suas histórias de uma forma rápida e organizada.</p>
 
-                    <img src="" alt="Projeto 3" class="img-fluid w-100">
+                    <img src="img/projeto3.png" alt="Projeto 3" class="img-fluid w-100">
                 </div>
                 <div class="modal-footer">
                     <a href="https://bruunagarcia.github.io/flashcardmeu1/flashCard/">Ver projeto ao vivo</a>
